Add support for running on older versions of Minecraft (#20)
* Working implementation with Java 11 and spigot api 1.13

* Update README with version requirements

---------

Co-authored-by: Scott Barnes <sgbarnes@protonmail.com>